# korrekturabzug

./: .dockerignore  .gitignore  Dockerfile  config.yaml  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py
app/generator/: auto_bleed.py  bleed_expander.py  proof_pdf.py  tech_svg.py
app/preflight/: engine.py
app/preflight/rules/: _reference_box.py  drill_holes.py  fonts.py  image_dpi.py  min_size.py  overprint_check.py  page_size.py  rgb_check.py  safe_area.py  spot_colors.py  spotcolor_list.py
deploy/: korrekturabzug-cleanup  nginx-proof.conf
static/: index.html
tests/: test_auto_bleed.py  test_dpi.py  test_drill_holes.py  test_min_size.py  test_models.py  test_overprint.py  test_safe_area.py  test_spot_colors.py  test_xobject_spots.py
